<resources>
    <string name="app_name">Naruto Game</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_error">Error</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="section_title">Section title</string>
    <string name="type_your_account_email">Type your account email</string>
    <string name="hall_da_fama">Hall of Fame</string>
    <string name="news">News</string>
    <string name="title">Title</string>
    <string name="recover_password">Recover Password</string>
    <string name="button_submit_changes">Submit Changes</string>
    <string name="change_password">Change Password</string>
    <string name="button_open_support_ticket">Open Support Ticket</string>
    <string name="create">Create</string>
    <string name="Play">Play</string>
    <string name="remove">Remove</string>
    <string name="button_change_image">Change Image</string>
    <string name="train">Train</string>
    <string name="enter_the_clan">Enter the Clan</string>
    <string name="button_abandonar_cla">Abandonar Clã</string>
    <string name="button_aceitar_pacto">Aceitar Pacto</string>
    <string name="button_quebrar_pacto">Quebrar Pacto</string>
    <string name="button_duelar">Duelar</string>
    <string name="button_play_lucky">Play!</string>
    <string name="receive">Receive</string>
    <string name="button_not_received">Not received</string>
    <string name="button_graduate">Graduate</string>
    <string name="button_accept">Accept</string>
    <string name="button_cancel_mission">Cancel Mission</string>
    <string name="finish">Finish</string>
    <string name="button_go_to_the_queue">Go to the queue</string>
    <string name="button_filter">Filter</string>
    <string name="title_activity_logado_selecionar" translatable="false">LogadoSelecionarActivity</string>
    <string name="title_activity_personagem_logado" translatable="false">PersonagemLogadoActivity</string>
    <string name="select_your_character">SELECT YOUR CHARACTER</string>
    <string name="section_messenger">MESSENGER</string>
    <string name="section_formulas">FORMULAS</string>
    <string name="section_character_status">CHARACTER STATUS</string>
    <string name="section_clans">CLANS</string>
    <string name="section_summons">SUMMONS</string>
    <string name="section_story_mode">STORY MODE</string>
    <string name="section_ninja_lucky">NINJA LUCKY</string>
    <string name="section_ninja_fidelity">NINJA FIDELITY</string>
    <string name="section_graduations">GRADUATIONS</string>
    <string name="section_attribute_training">ATTRIBUTE TRAINING</string>
    <string name="secao_treinamento_de_jutsus">TREINAMENTO DE JUTSUS</string>
    <string name="section_learned_jutsus">LEARNED JUTSUS</string>
    <string name="section_sensei" translatable="false">SENSEI</string>
    <string name="section_initial_tasks">INITIAL TASKS</string>
    <string name="section_ramen_shop" translatable="false">RAMEN SHOP</string>
    <string name="section_ninja_shop" translatable="false">NINJA SHOP</string>
    <string name="section_village_map">VILLAGE MAP</string>
    <string name="section_missions">MISSIONS</string>
    <string name="section_dojo" translatable="false">DOJO</string>
    <string name="section_dojo_4x4" translatable="false">DOJO 4X4</string>
    <string name="section_arena" translatable="false">ARENA</string>
    <string name="section_battle_log">BATTLE LOG</string>
    <string name="section_create_a_team">CREATE A TEAM</string>
    <string name="section_equipe_detalhe">TEAM</string>
    <string name="section_ninjas_ranking">NINJAS RANKING</string>
    <string name="section_teams_ranking">TEAMS RANKING</string>
    <string name="taijutsu" translatable="false">Taijutsu</string>
    <string name="bukijutsu" translatable="false">Bukijutsu</string>
    <string name="ninjustu" translatable="false">Ninjustu</string>
    <string name="genjutsu" translatable="false">Genjutsu</string>
    <string name="agility">Agility</string>
    <string name="seal">Seal</string>
    <string name="strength">Strength</string>
    <string name="intelligence">Intelligence</string>
    <string name="resistance">Resistance</string>
    <string name="energy">Energy</string>
    <string name="life">Life</string>
    <string name="determinacao">Determinação</string>
    <string name="esquiva">Esquiva</string>
    <string name="chat_naruto_game" translatable="false">CHAT NARUTO GAME</string>
    <string name="file">File</string>
    <string name="manual_training">Manual Training</string>
    <string name="quantity">Quantity</string>
    <string name="dojo_npc_fighters">Dojo NPC Fighters</string>
    <string name="dojo_pvp_fighters">Dojo PVP Fighters</string>
    <string name="section_home" translatable="false">HOME</string>
    <string name="home" translatable="false">Home</string>
    <string name="account_is_not_registered">Account is not registered</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="button_play">Play</string>
    <string name="ninjas_statistics">Ninja Statistics</string>
    <string name="email_not_found">Email not found</string>
    <string name="kages_amp_vilas" translatable="false"><![CDATA[Kages & Vilas]]></string>
    <string name="section_create_account">CREATE YOUR ACCOUNT</string>
    <string name="create_an_account">Create an Account</string>
    <string name="just_a_bit_now">JUST A BIT NOW!</string>
    <string name="fullfill_the_form_below">Fulfill the form below to create your account and starts your adventure.
You will receive an email to confirm your account, then you NEED TO USE AN VALID EMAIL to play Naruto Game!</string>
    <string name="full_name">Full Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="accont_created_successfuly">ACCOUNT CREATED SUCCESSFULLY</string>
    <string name="email_verification_sent" translatable="false">You will receive an email soon</string>
    <string name="new_invalid_password">The given password is invalid. [Password should be at least 6 characters]</string>
    <string name="invalid_email">Invalid email</string>
    <string name="weak_password">Weak Password</string>
    <string name="error_to_the_signup">Error to the signup</string>
    <string name="name_field_requered">The name field is required</string>
    <string name="email_field_requered">The email field is required</string>
    <string name="password_field_requered">The password field is required</string>
    <string name="confirm_password_field_requered">The confirm password field is required</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="different_passwords">The \'Password\' and \'Confirm Password\' fields are different</string>
    <string name="section_read_news">READ NEWS</string>
    <string name="leave_your_comment">Leave your comment</string>
    <string name="by">- by</string>
    <string name="comment">Comment</string>
    <string name="if_you_do_not_remember_your_password">If you do not remember your password, type
        your email account below and click \"send\". In a few minutes you will receive your new password</string>
    <string name="section_i_forgot_my_password">"I FORGOT MY PASSWORD "</string>
    <string name="password_was_sent">THE PASSWORD WAS SENT SUCCESSFULLY</string>
    <string name="section_hall_of_fame">HALL OF FAME</string>
    <string name="password_sent_description">In few minutes you will receive an email to change your
        password. Only the link sent to you can change the password. Remember: copy and keep safe your password.</string>
    <string name="create_character">Create</string>
    <string name="received">Received</string>
    <string name="birthday">Birthday</string>
    <string name="section_account_info">ACCOUNT INFO</string>
    <string name="my_Info">My Info</string>
    <string name="user_info_updated">USER INFO UPDATED</string>
    <string name="user_info_updated_description">Your info was changed with success.</string>
    <string name="keep_your_info_updated">KEEP YOUR INFO UPDATED</string>
    <string name="keep_your_account_updated_description">Keep your account info updated and correct,
        so we can send prizes if you win something in the game.</string>
    <string name="name">Name</string>
    <string name="full_address">Full Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="hint_city">City</string>
    <string name="hint_neighborhood">Neighborhood</string>
    <string name="hint_state">State</string>
    <string name="label_name">Name:</string>
    <string name="mask_data" translatable="false">NN/NN/NNNN</string>
    <string name="section_change_password">CHANGE YOUR PASSWORD</string>
    <string name="be_advised">BE ADVISED</string>
    <string name="be_advised_description">When you share your account info with others, you are in
        risk of they change your password, and you will lose your account.</string>
    <string name="retype_the_new_password">Retype the new Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current password</string>
    <string name="please_fill_all_the_fields">Please fill all the fields.</string>
    <string name="the_passwords_do_not_match">The passwords do not match</string>
    <string name="password_isnt_valid">The current password isn\'t valid.</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="password_changed">Your password was changed successfully.</string>
    <string name="section_support">SUPPORT</string>
    <string name="section_support_new_ticket">SUPPORT - NEW SUPPORT TICKET</string>
    <string name="support">Support</string>
    <string name="section_select_your_character">SELECT YOUR CHARACTER</string>
    <string name="select_character">Select Character</string>
    <string name="label_grade">Grade:</string>
    <string name="label_level" translatable="false">Level:</string>
    <string name="attributes_summary">Attributes Summary</string>
    <string name="battle">Battle</string>
    <string name="allied_ninja">Allied Ninja\n( Green Background Color )</string>
    <string name="enemy_ninja">Enemy Ninja\n( Red Background Color )</string>
    <string name="bb_target_ninja">BB Target Ninja\n( Yellow Background Color )</string>
    <string name="place_entry">Place Entry</string>
    <string name="event_ninja">Event Ninja\n(Purple Background Color)</string>
    <string name="neutral_ninja">Neutral Ninja\n(Gray Background Color)</string>
    <string name="send_message">Send Message</string>
    <string name="map_legends">Map Legends</string>
    <string name="label_accuracy2">Accuracy:</string>
    <string name="label_defense_nin_gen">Defense ( Nin / Gen ):</string>
    <string name="label_defense_tai_buk">Defense ( Tai / Buk ):</string>
    <string name="label_attack_nin_gen">Attack ( Nin / Gen ):</string>
    <string name="label_attack_tai_buk">Attack ( Tai / Buk ):</string>
    <string name="game_routines">Game Routines</string>
    <string name="various_routines_description">Releases training attributes. Clears the daily exp
        earned on the teams. Renew daily NPC combats and duel training counters.</string>
    <string name="recovers_description">Recovers 20% of its attributes.</string>
    <string name="move_around_the_map">To move around the map, just double-click on the square where
        you want to go.</string>
</resources>