<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.gutotech.narutogame.ui.playing.PlayingViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_popup"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/game_routines"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/label_healing(viewModel.healing)}"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recovers_description"
                android:textColor="@color/colorText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/various_routines(viewModel.variousRoutines)}"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/various_routines_description"
                android:textColor="@color/colorText" />
        </LinearLayout>
    </ScrollView>
</layout>