<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.loggedin.changepassword.PasswordChangeFragment">

    <data>

        <variable
            name="viewModel"
            type="com.gutotech.narutogame.ui.loggedin.changepassword.PasswordChangeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_pagina_repeat"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/passwordChangedMsgLayout"
                layout="@layout/section_msg"
                android:visibility="gone" />

            <include
                android:id="@+id/msgLayout"
                layout="@layout/section_msg" />

            <EditText
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:ems="10"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:text="@={viewModel.currentPassword}"
                android:textColorHint="#8BADBB" />

            <EditText
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:text="@={viewModel.newPassword}"
                android:textColorHint="@android:color/holo_orange_dark" />

            <EditText
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:ems="10"
                android:hint="@string/retype_the_new_password"
                android:inputType="textPassword"
                android:text="@={viewModel.newPassword2}"
                android:textColorHint="@android:color/holo_orange_dark" />

            <Button
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> viewModel.onChangePasswordButtonPressed()}"
                android:text="@string/change_password" />
        </LinearLayout>
    </ScrollView>
</layout>