<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gutotech.narutogame.ui.playing.currentvillage.VillageMapViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.playing.currentvillage.VillageMapFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/villageMapRecyclerView"
                android:layout_width="380dp"
                android:layout_height="497dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/layout_mapa_1"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:spanCount="10"
                tools:itemCount="120"
                tools:listitem="@layout/adapter_village_map" />

            <LinearLayout
                android:id="@+id/linearLayout20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/villageMapRecyclerView">

                <TextView
                    android:id="@+id/textView98"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="//"
                    android:textColor="@android:color/holo_orange_dark" />

                <TextView
                    android:id="@+id/textView91"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_legends"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:fontFamily="casual" />

                <TextView
                    android:id="@+id/textView97"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" .................................................."
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mapLegendsConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout20">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline58"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/alliedNinjaTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/layout_legenda_1"
                        android:drawableLeft="@drawable/layout_legenda_1"
                        android:drawablePadding="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/allied_ninja"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/enemyNinjaTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/layout_legenda_2"
                        android:drawableLeft="@drawable/layout_legenda_2"
                        android:drawablePadding="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/enemy_ninja"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/bbTargetNinjaTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:drawableStart="@drawable/layout_legenda_4"
                        android:drawableLeft="@drawable/layout_legenda_4"
                        android:drawablePadding="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/bb_target_ninja"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/layout_legenda_bt_mapa_batalhar"
                        android:drawableLeft="@drawable/layout_legenda_bt_mapa_batalhar"
                        android:drawablePadding="2dp"
                        android:gravity="center_vertical"
                        android:text="@string/battle"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/neutralNinjaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:drawableStart="@drawable/layout_legenda_0"
                    android:drawableLeft="@drawable/layout_legenda_0"
                    android:drawablePadding="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/neutral_ninja"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline58"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/eventNinjaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/layout_legenda_5"
                    android:drawableLeft="@drawable/layout_legenda_5"
                    android:drawablePadding="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/event_ninja"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline58"
                    app:layout_constraintTop_toBottomOf="@+id/neutralNinjaTextView" />

                <TextView
                    android:id="@+id/placeEntryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/layout_ico_mapa_vila"
                    android:drawableLeft="@drawable/layout_ico_mapa_vila"
                    android:drawablePadding="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/place_entry"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline58"
                    app:layout_constraintTop_toBottomOf="@+id/sendMessageTextView" />

                <TextView
                    android:id="@+id/sendMessageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/layout_legenda_bt_mapa_mensagem"
                    android:drawableLeft="@drawable/layout_legenda_bt_mapa_mensagem"
                    android:drawablePadding="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/send_message"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline58"
                    app:layout_constraintTop_toBottomOf="@+id/eventNinjaTextView" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline58"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.50" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView32"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="@string/move_around_the_map"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapLegendsConstraintLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>